# termui

./: LICENSE  README.md  STRUCTURE.md  pyproject.toml
docs/: getting_started.md
scripts/: demo.py
src/termui/: __init__.py  clipboard.py  confirm_panel.py  console.py  diff.py  input.py  layout.py  notify.py  output.py  table_stream.py  termui_logging.py  theme.py
tests/: conftest.py  test_clipboard.py  test_diff.py  test_layout.py  test_logging.py  test_notify.py  test_output.py  test_table_stream.py  test_theme.py
