[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termui"
version = "1.0.0"
description = "A rich terminal UI library for AI agent interactions"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["terminal", "ui", "rich", "prompt-toolkit", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
]

dependencies = [
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.8"]
dev = [
    "mypy>=1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-rich>=0.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pyperclip>=1.8",
]

[project.urls]
Homepage = "https://github.com/yourusername/termui"
Documentation = "https://github.com/yourusername/termui#readme"
Repository = "https://github.com/yourusername/termui.git"
Issues = "https://github.com/yourusername/termui/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
